[project]
name = "tibiabot"
version = "2.0.0"
description = "Vision-based Tibia automation bot"
requires-python = ">=3.11"
dependencies = [
    "mss>=9.0.1",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "pyautogui>=0.9.54",
    "pyyaml>=6.0",
    "pytesseract>=0.3.10",
    "pynput>=1.7",
]

[project.scripts]
tibiabot   = "bot.main:main"
calibrate  = "calibrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
